--- a/index.html
+++ b/index.html
@@ -9,87 +9,94 @@
 <!-- HEADER -->
     <header>
       <div class="header">
-        <img src="./resources/images/logo.png" alt="White Binoculars">
-        <span>SECRET AGENT SUPPLY INC.</span>
+        <div class="container">
+          <img src="./resources/images/logo.png" alt="White Binoculars">
+          <span class="heading">SECRET AGENT SUPPLY INC.</span>
+        </div>
       </div>
     </header>
 <!-- MAIN BANNER -->
     <div class="site-container">
       <div id="main-banner">
-        <div class="banner-item">
-          <div class="banner-text">
-            <p>NEW ARRIVAL</p>
-            <h1>SPORT BIKES AND MOTORCYCLES</h1>
+        <div class="container">
+          <div class="banner-item">
+            <div class="banner-text">
+              <p>NEW ARRIVAL</p>
+              <h1>SPORT BIKES AND MOTORCYCLES</h1>
+            </div>
           </div>
         </div>
       </div>
 <!-- NAVIGATION -->
-      <div id="navigation">
-          <div class="navigation-text">
-            <span>Eyewear</span>
-            <span>Apparel</span>
-            <span>Gadgets</span>
-            <span>Vehicles</span>
-            <span>Classes</span>
-            <span>Contact</span>
-          </div>
+      <div class="navigation">
+        <div class="navigation-text">
+          <span>Eyewear</span>
+          <span>Apparel</span>
+          <span>Gadgets</span>
+          <span>Vehicles</span>
+          <span>Classes</span>
+          <span>Contact</span>
+          <span id="menu">Menu</span>
         </div>
+      </div>
 <!-- PRODUCT GRID -->
-        <div class="product-grid">
-          <div class="item">
-            <div id="product-image">
-              <img src="./resources/images/pen.png" alt="Pen">
-            </div>
-            <div class="product-text">
-              <p>Exploding Pen</p>
-            </div>
+      <div class="product-grid">
+        <div class="item" id="pen">
+          <div class="product-image">
+            <img src="./resources/images/pen.png" alt="Pen">
           </div>
-          <div class="item">
-            <div id="product-image">
-              <img src="./resources/images/watch.png" alt="Watch">
-            </div>
-            <div class="product-text">
-              <p>Cellular Watch</p>
-            </div>
-          </div>
-          <div class="item">
-            <div id="product-image">
-              <div class="glasses">
-                <img src="./resources/images/glasses.png" alt="Glasses">
-              </div>
-            </div>
-            <div class="product-text">
-              <p>Thermal Glasses</p>
-            </div>
+          <div class="product-text">
+            <p>Exploding Pen</p>
           </div>
         </div>
+        <div class="item" id="watch">
+          <div class="product-image">
+            <img src="./resources/images/watch.png" alt="Watch">
+          </div>
+          <div class="product-text">
+            <p>Cellular Watch</p>
+          </div>
+        </div>
+        <div class="item" id="glasses">
+          <div class="product-image">
+            <div class="glasses">
+              <img src="./resources/images/glasses.png" alt="Glasses">
+            </div>
+          </div>
+          <div class="product-text">
+            <p>Thermal Glasses</p>
+          </div>
+        </div>
+      </div>
 <!-- LOCATION and HOURS -->
-        <div class="location-hours">
-          <div class="location">
-            <div class="banner">
-              <p>Location</p>
-            </div>
-            <div class="value">
-              <p>-47.346436, 84.32354</p>
-            </div>
+      <div class="location-hours">
+        <div class="location">
+          <div class="banner">
+            <p>Location</p>
           </div>
+          <div class="value">
+            <p>-47.346436, 84.32354</p>
+          </div>
+        </div>
       <!-- hours -->
-          <div class="hours">
-            <div class="banner">
-              <p>Hours</p>
-            </div>
-            <div class="value">
-              <p>0800 - 1800</p>
-            </div>
+        <div class="hours">
+          <div class="banner">
+            <p>Hours</p>
+          </div>
+          <div class="value">
+            <p>0800 - 1800</p>
           </div>
         </div>
-      </div> <!-- (for site-container) -->
+      </div>
+    </div> <!-- (for site-container) -->
 <!-- FOOTER -->
-      <footer>
-        <div class="footer">
-          <p>Copyright Secret Agent Supply Inc.</p>
+    <footer>
+      <div class="footer">
+        <div class="container">
+          <p class="copyright">Copyright Secret Agent Supply Inc.</p>
         </div>
-      </footer>
+      </div>
+    </footer>
 
   </body>
 </html>
